--- a/K-Nearest Neigbors/KNN-Classifier.ipynb
+++ b/K-Nearest Neigbors/KNN-Classifier.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:47.733658Z",
-     "start_time": "2019-09-29T18:36:47.722430Z"
+     "end_time": "2019-09-30T08:19:00.729808Z",
+     "start_time": "2019-09-30T08:19:00.721192Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:47.901280Z",
-     "start_time": "2019-09-29T18:36:47.733658Z"
+     "end_time": "2019-09-30T08:19:00.894095Z",
+     "start_time": "2019-09-30T08:19:00.732599Z"
     }
    },
    "outputs": [],
@@ -42,181 +42,33 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.094432Z",
-     "start_time": "2019-09-29T18:36:47.905001Z"
+     "end_time": "2019-09-30T08:19:01.065229Z",
+     "start_time": "2019-09-30T08:19:00.900085Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.1, 3.5, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.0, 1.4, 0.2, Iris-setosa\n",
-      "4.7, 3.2, 1.3, 0.2, Iris-setosa\n",
-      "4.6, 3.1, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.6, 1.4, 0.2, Iris-setosa\n",
-      "5.4, 3.9, 1.7, 0.4, Iris-setosa\n",
-      "4.6, 3.4, 1.4, 0.3, Iris-setosa\n",
-      "5.0, 3.4, 1.5, 0.2, Iris-setosa\n",
-      "4.4, 2.9, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "5.4, 3.7, 1.5, 0.2, Iris-setosa\n",
-      "4.8, 3.4, 1.6, 0.2, Iris-setosa\n",
-      "4.8, 3.0, 1.4, 0.1, Iris-setosa\n",
-      "4.3, 3.0, 1.1, 0.1, Iris-setosa\n",
-      "5.8, 4.0, 1.2, 0.2, Iris-setosa\n",
-      "5.7, 4.4, 1.5, 0.4, Iris-setosa\n",
-      "5.4, 3.9, 1.3, 0.4, Iris-setosa\n",
-      "5.1, 3.5, 1.4, 0.3, Iris-setosa\n",
-      "5.7, 3.8, 1.7, 0.3, Iris-setosa\n",
-      "5.1, 3.8, 1.5, 0.3, Iris-setosa\n",
-      "5.4, 3.4, 1.7, 0.2, Iris-setosa\n",
-      "5.1, 3.7, 1.5, 0.4, Iris-setosa\n",
-      "4.6, 3.6, 1.0, 0.2, Iris-setosa\n",
-      "5.1, 3.3, 1.7, 0.5, Iris-setosa\n",
-      "4.8, 3.4, 1.9, 0.2, Iris-setosa\n",
-      "5.0, 3.0, 1.6, 0.2, Iris-setosa\n",
-      "5.0, 3.4, 1.6, 0.4, Iris-setosa\n",
-      "5.2, 3.5, 1.5, 0.2, Iris-setosa\n",
-      "5.2, 3.4, 1.4, 0.2, Iris-setosa\n",
-      "4.7, 3.2, 1.6, 0.2, Iris-setosa\n",
-      "4.8, 3.1, 1.6, 0.2, Iris-setosa\n",
-      "5.4, 3.4, 1.5, 0.4, Iris-setosa\n",
-      "5.2, 4.1, 1.5, 0.1, Iris-setosa\n",
-      "5.5, 4.2, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "5.0, 3.2, 1.2, 0.2, Iris-setosa\n",
-      "5.5, 3.5, 1.3, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "4.4, 3.0, 1.3, 0.2, Iris-setosa\n",
-      "5.1, 3.4, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.5, 1.3, 0.3, Iris-setosa\n",
-      "4.5, 2.3, 1.3, 0.3, Iris-setosa\n",
-      "4.4, 3.2, 1.3, 0.2, Iris-setosa\n",
-      "5.0, 3.5, 1.6, 0.6, Iris-setosa\n",
-      "5.1, 3.8, 1.9, 0.4, Iris-setosa\n",
-      "4.8, 3.0, 1.4, 0.3, Iris-setosa\n",
-      "5.1, 3.8, 1.6, 0.2, Iris-setosa\n",
-      "4.6, 3.2, 1.4, 0.2, Iris-setosa\n",
-      "5.3, 3.7, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.3, 1.4, 0.2, Iris-setosa\n",
-      "7.0, 3.2, 4.7, 1.4, Iris-versicolor\n",
-      "6.4, 3.2, 4.5, 1.5, Iris-versicolor\n",
-      "6.9, 3.1, 4.9, 1.5, Iris-versicolor\n",
-      "5.5, 2.3, 4.0, 1.3, Iris-versicolor\n",
-      "6.5, 2.8, 4.6, 1.5, Iris-versicolor\n",
-      "5.7, 2.8, 4.5, 1.3, Iris-versicolor\n",
-      "6.3, 3.3, 4.7, 1.6, Iris-versicolor\n",
-      "4.9, 2.4, 3.3, 1.0, Iris-versicolor\n",
-      "6.6, 2.9, 4.6, 1.3, Iris-versicolor\n",
-      "5.2, 2.7, 3.9, 1.4, Iris-versicolor\n",
-      "5.0, 2.0, 3.5, 1.0, Iris-versicolor\n",
-      "5.9, 3.0, 4.2, 1.5, Iris-versicolor\n",
-      "6.0, 2.2, 4.0, 1.0, Iris-versicolor\n",
-      "6.1, 2.9, 4.7, 1.4, Iris-versicolor\n",
-      "5.6, 2.9, 3.6, 1.3, Iris-versicolor\n",
-      "6.7, 3.1, 4.4, 1.4, Iris-versicolor\n",
-      "5.6, 3.0, 4.5, 1.5, Iris-versicolor\n",
-      "5.8, 2.7, 4.1, 1.0, Iris-versicolor\n",
-      "6.2, 2.2, 4.5, 1.5, Iris-versicolor\n",
-      "5.6, 2.5, 3.9, 1.1, Iris-versicolor\n",
-      "5.9, 3.2, 4.8, 1.8, Iris-versicolor\n",
-      "6.1, 2.8, 4.0, 1.3, Iris-versicolor\n",
-      "6.3, 2.5, 4.9, 1.5, Iris-versicolor\n",
-      "6.1, 2.8, 4.7, 1.2, Iris-versicolor\n",
-      "6.4, 2.9, 4.3, 1.3, Iris-versicolor\n",
-      "6.6, 3.0, 4.4, 1.4, Iris-versicolor\n",
-      "6.8, 2.8, 4.8, 1.4, Iris-versicolor\n",
-      "6.7, 3.0, 5.0, 1.7, Iris-versicolor\n",
-      "6.0, 2.9, 4.5, 1.5, Iris-versicolor\n",
-      "5.7, 2.6, 3.5, 1.0, Iris-versicolor\n",
-      "5.5, 2.4, 3.8, 1.1, Iris-versicolor\n",
-      "5.5, 2.4, 3.7, 1.0, Iris-versicolor\n",
-      "5.8, 2.7, 3.9, 1.2, Iris-versicolor\n",
-      "6.0, 2.7, 5.1, 1.6, Iris-versicolor\n",
-      "5.4, 3.0, 4.5, 1.5, Iris-versicolor\n",
-      "6.0, 3.4, 4.5, 1.6, Iris-versicolor\n",
-      "6.7, 3.1, 4.7, 1.5, Iris-versicolor\n",
-      "6.3, 2.3, 4.4, 1.3, Iris-versicolor\n",
-      "5.6, 3.0, 4.1, 1.3, Iris-versicolor\n",
-      "5.5, 2.5, 4.0, 1.3, Iris-versicolor\n",
-      "5.5, 2.6, 4.4, 1.2, Iris-versicolor\n",
-      "6.1, 3.0, 4.6, 1.4, Iris-versicolor\n",
-      "5.8, 2.6, 4.0, 1.2, Iris-versicolor\n",
-      "5.0, 2.3, 3.3, 1.0, Iris-versicolor\n",
-      "5.6, 2.7, 4.2, 1.3, Iris-versicolor\n",
-      "5.7, 3.0, 4.2, 1.2, Iris-versicolor\n",
-      "5.7, 2.9, 4.2, 1.3, Iris-versicolor\n",
-      "6.2, 2.9, 4.3, 1.3, Iris-versicolor\n",
-      "5.1, 2.5, 3.0, 1.1, Iris-versicolor\n",
-      "5.7, 2.8, 4.1, 1.3, Iris-versicolor\n",
-      "6.3, 3.3, 6.0, 2.5, Iris-virginica\n",
-      "5.8, 2.7, 5.1, 1.9, Iris-virginica\n",
-      "7.1, 3.0, 5.9, 2.1, Iris-virginica\n",
-      "6.3, 2.9, 5.6, 1.8, Iris-virginica\n",
-      "6.5, 3.0, 5.8, 2.2, Iris-virginica\n",
-      "7.6, 3.0, 6.6, 2.1, Iris-virginica\n",
-      "4.9, 2.5, 4.5, 1.7, Iris-virginica\n",
-      "7.3, 2.9, 6.3, 1.8, Iris-virginica\n",
-      "6.7, 2.5, 5.8, 1.8, Iris-virginica\n",
-      "7.2, 3.6, 6.1, 2.5, Iris-virginica\n",
-      "6.5, 3.2, 5.1, 2.0, Iris-virginica\n",
-      "6.4, 2.7, 5.3, 1.9, Iris-virginica\n",
-      "6.8, 3.0, 5.5, 2.1, Iris-virginica\n",
-      "5.7, 2.5, 5.0, 2.0, Iris-virginica\n",
-      "5.8, 2.8, 5.1, 2.4, Iris-virginica\n",
-      "6.4, 3.2, 5.3, 2.3, Iris-virginica\n",
-      "6.5, 3.0, 5.5, 1.8, Iris-virginica\n",
-      "7.7, 3.8, 6.7, 2.2, Iris-virginica\n",
-      "7.7, 2.6, 6.9, 2.3, Iris-virginica\n",
-      "6.0, 2.2, 5.0, 1.5, Iris-virginica\n",
-      "6.9, 3.2, 5.7, 2.3, Iris-virginica\n",
-      "5.6, 2.8, 4.9, 2.0, Iris-virginica\n",
-      "7.7, 2.8, 6.7, 2.0, Iris-virginica\n",
-      "6.3, 2.7, 4.9, 1.8, Iris-virginica\n",
-      "6.7, 3.3, 5.7, 2.1, Iris-virginica\n",
-      "7.2, 3.2, 6.0, 1.8, Iris-virginica\n",
-      "6.2, 2.8, 4.8, 1.8, Iris-virginica\n",
-      "6.1, 3.0, 4.9, 1.8, Iris-virginica\n",
-      "6.4, 2.8, 5.6, 2.1, Iris-virginica\n",
-      "7.2, 3.0, 5.8, 1.6, Iris-virginica\n",
-      "7.4, 2.8, 6.1, 1.9, Iris-virginica\n",
-      "7.9, 3.8, 6.4, 2.0, Iris-virginica\n",
-      "6.4, 2.8, 5.6, 2.2, Iris-virginica\n",
-      "6.3, 2.8, 5.1, 1.5, Iris-virginica\n",
-      "6.1, 2.6, 5.6, 1.4, Iris-virginica\n",
-      "7.7, 3.0, 6.1, 2.3, Iris-virginica\n",
-      "6.3, 3.4, 5.6, 2.4, Iris-virginica\n",
-      "6.4, 3.1, 5.5, 1.8, Iris-virginica\n",
-      "6.0, 3.0, 4.8, 1.8, Iris-virginica\n",
-      "6.9, 3.1, 5.4, 2.1, Iris-virginica\n",
-      "6.7, 3.1, 5.6, 2.4, Iris-virginica\n",
-      "6.9, 3.1, 5.1, 2.3, Iris-virginica\n",
-      "5.8, 2.7, 5.1, 1.9, Iris-virginica\n",
-      "6.8, 3.2, 5.9, 2.3, Iris-virginica\n",
-      "6.7, 3.3, 5.7, 2.5, Iris-virginica\n",
-      "6.7, 3.0, 5.2, 2.3, Iris-virginica\n",
-      "6.3, 2.5, 5.0, 1.9, Iris-virginica\n",
-      "6.5, 3.0, 5.2, 2.0, Iris-virginica\n",
-      "6.2, 3.4, 5.4, 2.3, Iris-virginica\n",
-      "5.9, 3.0, 5.1, 1.8, Iris-virginica\n",
-      "\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-2d9d956215a3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-2d9d956215a3>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    dataset =\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "dataset = r'../datasets/iris.data'\n",
+    "dataset = \n",
     "viewDataset(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.252290Z",
-     "start_time": "2019-09-29T18:36:48.097061Z"
+     "end_time": "2019-09-30T08:19:01.070525Z",
+     "start_time": "2019-09-30T08:19:00.709Z"
     }
    },
    "outputs": [],
@@ -239,23 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.421547Z",
-     "start_time": "2019-09-29T18:36:48.255980Z"
+     "end_time": "2019-09-30T08:19:01.071525Z",
+     "start_time": "2019-09-30T08:19:00.711Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 101\n",
-      "Test: 49\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test handleDataset\n",
     "\n",
@@ -266,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.590781Z",
-     "start_time": "2019-09-29T18:36:48.424101Z"
+     "end_time": "2019-09-30T08:19:01.071525Z",
+     "start_time": "2019-09-30T08:19:00.712Z"
     }
    },
    "outputs": [],
@@ -284,22 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.762945Z",
-     "start_time": "2019-09-29T18:36:48.600748Z"
+     "end_time": "2019-09-30T08:19:01.071525Z",
+     "start_time": "2019-09-30T08:19:00.714Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance: 3.4641016151377544\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test Euclidean Distance\n",
     "data1 = [2, 2, 2, 'a']\n",
@@ -310,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:48.954172Z",
-     "start_time": "2019-09-29T18:36:48.767486Z"
+     "end_time": "2019-09-30T08:19:01.075612Z",
+     "start_time": "2019-09-30T08:19:00.715Z"
     }
    },
    "outputs": [],
@@ -334,22 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:49.144592Z",
-     "start_time": "2019-09-29T18:36:48.956537Z"
+     "end_time": "2019-09-30T08:19:01.075612Z",
+     "start_time": "2019-09-30T08:19:00.717Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4, 4, 4, 'b']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test getKNeighbors\n",
     "\n",
@@ -362,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:49.305851Z",
-     "start_time": "2019-09-29T18:36:49.148078Z"
+     "end_time": "2019-09-30T08:19:01.082081Z",
+     "start_time": "2019-09-30T08:19:00.719Z"
     }
    },
    "outputs": [],
@@ -388,22 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:49.528418Z",
-     "start_time": "2019-09-29T18:36:49.311957Z"
+     "end_time": "2019-09-30T08:19:01.083757Z",
+     "start_time": "2019-09-30T08:19:00.722Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test getResponse\n",
     "\n",
@@ -413,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:49.706607Z",
-     "start_time": "2019-09-29T18:36:49.534112Z"
+     "end_time": "2019-09-30T08:19:01.084757Z",
+     "start_time": "2019-09-30T08:19:00.724Z"
     }
    },
    "outputs": [],
@@ -433,22 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:49.957789Z",
-     "start_time": "2019-09-29T18:36:49.710400Z"
+     "end_time": "2019-09-30T08:19:01.086861Z",
+     "start_time": "2019-09-30T08:19:00.726Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.66666666666666\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test getAccuracy\n",
     "\n",
@@ -460,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:50.162297Z",
-     "start_time": "2019-09-29T18:36:49.961912Z"
+     "end_time": "2019-09-30T08:19:01.088859Z",
+     "start_time": "2019-09-30T08:19:00.728Z"
     }
    },
    "outputs": [],
@@ -490,73 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:36:50.401953Z",
-     "start_time": "2019-09-29T18:36:50.166387Z"
+     "end_time": "2019-09-30T08:19:01.090376Z",
+     "start_time": "2019-09-30T08:19:00.730Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 101\n",
-      "Test: 49\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-virginica, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-virginica, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-versicolor, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-versicolor, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "Accuracy: 91.837%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
