--- a/K-Nearest Neigbors/KNN-Classifier.ipynb
+++ b/K-Nearest Neigbors/KNN-Classifier.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:40.078551Z",
-     "start_time": "2019-09-30T20:32:40.070508Z"
+     "end_time": "2020-02-16T23:06:30.008859Z",
+     "start_time": "2020-02-16T23:06:30.002839Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:40.673357Z",
-     "start_time": "2019-09-30T20:32:40.665364Z"
+     "end_time": "2020-02-16T23:06:30.143114Z",
+     "start_time": "2020-02-16T23:06:30.010816Z"
     }
    },
    "outputs": [],
@@ -42,172 +42,14 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:40.979999Z",
-     "start_time": "2019-09-30T20:32:40.927939Z"
+     "end_time": "2020-02-16T23:06:30.290169Z",
+     "start_time": "2020-02-16T23:06:30.149057Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.1, 3.5, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.0, 1.4, 0.2, Iris-setosa\n",
-      "4.7, 3.2, 1.3, 0.2, Iris-setosa\n",
-      "4.6, 3.1, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.6, 1.4, 0.2, Iris-setosa\n",
-      "5.4, 3.9, 1.7, 0.4, Iris-setosa\n",
-      "4.6, 3.4, 1.4, 0.3, Iris-setosa\n",
-      "5.0, 3.4, 1.5, 0.2, Iris-setosa\n",
-      "4.4, 2.9, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "5.4, 3.7, 1.5, 0.2, Iris-setosa\n",
-      "4.8, 3.4, 1.6, 0.2, Iris-setosa\n",
-      "4.8, 3.0, 1.4, 0.1, Iris-setosa\n",
-      "4.3, 3.0, 1.1, 0.1, Iris-setosa\n",
-      "5.8, 4.0, 1.2, 0.2, Iris-setosa\n",
-      "5.7, 4.4, 1.5, 0.4, Iris-setosa\n",
-      "5.4, 3.9, 1.3, 0.4, Iris-setosa\n",
-      "5.1, 3.5, 1.4, 0.3, Iris-setosa\n",
-      "5.7, 3.8, 1.7, 0.3, Iris-setosa\n",
-      "5.1, 3.8, 1.5, 0.3, Iris-setosa\n",
-      "5.4, 3.4, 1.7, 0.2, Iris-setosa\n",
-      "5.1, 3.7, 1.5, 0.4, Iris-setosa\n",
-      "4.6, 3.6, 1.0, 0.2, Iris-setosa\n",
-      "5.1, 3.3, 1.7, 0.5, Iris-setosa\n",
-      "4.8, 3.4, 1.9, 0.2, Iris-setosa\n",
-      "5.0, 3.0, 1.6, 0.2, Iris-setosa\n",
-      "5.0, 3.4, 1.6, 0.4, Iris-setosa\n",
-      "5.2, 3.5, 1.5, 0.2, Iris-setosa\n",
-      "5.2, 3.4, 1.4, 0.2, Iris-setosa\n",
-      "4.7, 3.2, 1.6, 0.2, Iris-setosa\n",
-      "4.8, 3.1, 1.6, 0.2, Iris-setosa\n",
-      "5.4, 3.4, 1.5, 0.4, Iris-setosa\n",
-      "5.2, 4.1, 1.5, 0.1, Iris-setosa\n",
-      "5.5, 4.2, 1.4, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "5.0, 3.2, 1.2, 0.2, Iris-setosa\n",
-      "5.5, 3.5, 1.3, 0.2, Iris-setosa\n",
-      "4.9, 3.1, 1.5, 0.1, Iris-setosa\n",
-      "4.4, 3.0, 1.3, 0.2, Iris-setosa\n",
-      "5.1, 3.4, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.5, 1.3, 0.3, Iris-setosa\n",
-      "4.5, 2.3, 1.3, 0.3, Iris-setosa\n",
-      "4.4, 3.2, 1.3, 0.2, Iris-setosa\n",
-      "5.0, 3.5, 1.6, 0.6, Iris-setosa\n",
-      "5.1, 3.8, 1.9, 0.4, Iris-setosa\n",
-      "4.8, 3.0, 1.4, 0.3, Iris-setosa\n",
-      "5.1, 3.8, 1.6, 0.2, Iris-setosa\n",
-      "4.6, 3.2, 1.4, 0.2, Iris-setosa\n",
-      "5.3, 3.7, 1.5, 0.2, Iris-setosa\n",
-      "5.0, 3.3, 1.4, 0.2, Iris-setosa\n",
-      "7.0, 3.2, 4.7, 1.4, Iris-versicolor\n",
-      "6.4, 3.2, 4.5, 1.5, Iris-versicolor\n",
-      "6.9, 3.1, 4.9, 1.5, Iris-versicolor\n",
-      "5.5, 2.3, 4.0, 1.3, Iris-versicolor\n",
-      "6.5, 2.8, 4.6, 1.5, Iris-versicolor\n",
-      "5.7, 2.8, 4.5, 1.3, Iris-versicolor\n",
-      "6.3, 3.3, 4.7, 1.6, Iris-versicolor\n",
-      "4.9, 2.4, 3.3, 1.0, Iris-versicolor\n",
-      "6.6, 2.9, 4.6, 1.3, Iris-versicolor\n",
-      "5.2, 2.7, 3.9, 1.4, Iris-versicolor\n",
-      "5.0, 2.0, 3.5, 1.0, Iris-versicolor\n",
-      "5.9, 3.0, 4.2, 1.5, Iris-versicolor\n",
-      "6.0, 2.2, 4.0, 1.0, Iris-versicolor\n",
-      "6.1, 2.9, 4.7, 1.4, Iris-versicolor\n",
-      "5.6, 2.9, 3.6, 1.3, Iris-versicolor\n",
-      "6.7, 3.1, 4.4, 1.4, Iris-versicolor\n",
-      "5.6, 3.0, 4.5, 1.5, Iris-versicolor\n",
-      "5.8, 2.7, 4.1, 1.0, Iris-versicolor\n",
-      "6.2, 2.2, 4.5, 1.5, Iris-versicolor\n",
-      "5.6, 2.5, 3.9, 1.1, Iris-versicolor\n",
-      "5.9, 3.2, 4.8, 1.8, Iris-versicolor\n",
-      "6.1, 2.8, 4.0, 1.3, Iris-versicolor\n",
-      "6.3, 2.5, 4.9, 1.5, Iris-versicolor\n",
-      "6.1, 2.8, 4.7, 1.2, Iris-versicolor\n",
-      "6.4, 2.9, 4.3, 1.3, Iris-versicolor\n",
-      "6.6, 3.0, 4.4, 1.4, Iris-versicolor\n",
-      "6.8, 2.8, 4.8, 1.4, Iris-versicolor\n",
-      "6.7, 3.0, 5.0, 1.7, Iris-versicolor\n",
-      "6.0, 2.9, 4.5, 1.5, Iris-versicolor\n",
-      "5.7, 2.6, 3.5, 1.0, Iris-versicolor\n",
-      "5.5, 2.4, 3.8, 1.1, Iris-versicolor\n",
-      "5.5, 2.4, 3.7, 1.0, Iris-versicolor\n",
-      "5.8, 2.7, 3.9, 1.2, Iris-versicolor\n",
-      "6.0, 2.7, 5.1, 1.6, Iris-versicolor\n",
-      "5.4, 3.0, 4.5, 1.5, Iris-versicolor\n",
-      "6.0, 3.4, 4.5, 1.6, Iris-versicolor\n",
-      "6.7, 3.1, 4.7, 1.5, Iris-versicolor\n",
-      "6.3, 2.3, 4.4, 1.3, Iris-versicolor\n",
-      "5.6, 3.0, 4.1, 1.3, Iris-versicolor\n",
-      "5.5, 2.5, 4.0, 1.3, Iris-versicolor\n",
-      "5.5, 2.6, 4.4, 1.2, Iris-versicolor\n",
-      "6.1, 3.0, 4.6, 1.4, Iris-versicolor\n",
-      "5.8, 2.6, 4.0, 1.2, Iris-versicolor\n",
-      "5.0, 2.3, 3.3, 1.0, Iris-versicolor\n",
-      "5.6, 2.7, 4.2, 1.3, Iris-versicolor\n",
-      "5.7, 3.0, 4.2, 1.2, Iris-versicolor\n",
-      "5.7, 2.9, 4.2, 1.3, Iris-versicolor\n",
-      "6.2, 2.9, 4.3, 1.3, Iris-versicolor\n",
-      "5.1, 2.5, 3.0, 1.1, Iris-versicolor\n",
-      "5.7, 2.8, 4.1, 1.3, Iris-versicolor\n",
-      "6.3, 3.3, 6.0, 2.5, Iris-virginica\n",
-      "5.8, 2.7, 5.1, 1.9, Iris-virginica\n",
-      "7.1, 3.0, 5.9, 2.1, Iris-virginica\n",
-      "6.3, 2.9, 5.6, 1.8, Iris-virginica\n",
-      "6.5, 3.0, 5.8, 2.2, Iris-virginica\n",
-      "7.6, 3.0, 6.6, 2.1, Iris-virginica\n",
-      "4.9, 2.5, 4.5, 1.7, Iris-virginica\n",
-      "7.3, 2.9, 6.3, 1.8, Iris-virginica\n",
-      "6.7, 2.5, 5.8, 1.8, Iris-virginica\n",
-      "7.2, 3.6, 6.1, 2.5, Iris-virginica\n",
-      "6.5, 3.2, 5.1, 2.0, Iris-virginica\n",
-      "6.4, 2.7, 5.3, 1.9, Iris-virginica\n",
-      "6.8, 3.0, 5.5, 2.1, Iris-virginica\n",
-      "5.7, 2.5, 5.0, 2.0, Iris-virginica\n",
-      "5.8, 2.8, 5.1, 2.4, Iris-virginica\n",
-      "6.4, 3.2, 5.3, 2.3, Iris-virginica\n",
-      "6.5, 3.0, 5.5, 1.8, Iris-virginica\n",
-      "7.7, 3.8, 6.7, 2.2, Iris-virginica\n",
-      "7.7, 2.6, 6.9, 2.3, Iris-virginica\n",
-      "6.0, 2.2, 5.0, 1.5, Iris-virginica\n",
-      "6.9, 3.2, 5.7, 2.3, Iris-virginica\n",
-      "5.6, 2.8, 4.9, 2.0, Iris-virginica\n",
-      "7.7, 2.8, 6.7, 2.0, Iris-virginica\n",
-      "6.3, 2.7, 4.9, 1.8, Iris-virginica\n",
-      "6.7, 3.3, 5.7, 2.1, Iris-virginica\n",
-      "7.2, 3.2, 6.0, 1.8, Iris-virginica\n",
-      "6.2, 2.8, 4.8, 1.8, Iris-virginica\n",
-      "6.1, 3.0, 4.9, 1.8, Iris-virginica\n",
-      "6.4, 2.8, 5.6, 2.1, Iris-virginica\n",
-      "7.2, 3.0, 5.8, 1.6, Iris-virginica\n",
-      "7.4, 2.8, 6.1, 1.9, Iris-virginica\n",
-      "7.9, 3.8, 6.4, 2.0, Iris-virginica\n",
-      "6.4, 2.8, 5.6, 2.2, Iris-virginica\n",
-      "6.3, 2.8, 5.1, 1.5, Iris-virginica\n",
-      "6.1, 2.6, 5.6, 1.4, Iris-virginica\n",
-      "7.7, 3.0, 6.1, 2.3, Iris-virginica\n",
-      "6.3, 3.4, 5.6, 2.4, Iris-virginica\n",
-      "6.4, 3.1, 5.5, 1.8, Iris-virginica\n",
-      "6.0, 3.0, 4.8, 1.8, Iris-virginica\n",
-      "6.9, 3.1, 5.4, 2.1, Iris-virginica\n",
-      "6.7, 3.1, 5.6, 2.4, Iris-virginica\n",
-      "6.9, 3.1, 5.1, 2.3, Iris-virginica\n",
-      "5.8, 2.7, 5.1, 1.9, Iris-virginica\n",
-      "6.8, 3.2, 5.9, 2.3, Iris-virginica\n",
-      "6.7, 3.3, 5.7, 2.5, Iris-virginica\n",
-      "6.7, 3.0, 5.2, 2.3, Iris-virginica\n",
-      "6.3, 2.5, 5.0, 1.9, Iris-virginica\n",
-      "6.5, 3.0, 5.2, 2.0, Iris-virginica\n",
-      "6.2, 3.4, 5.4, 2.3, Iris-virginica\n",
-      "5.9, 3.0, 5.1, 1.8, Iris-virginica\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = r'../datasets/iris.data'\n",
-    "viewDataset(dataset)"
+    "# viewDataset(dataset)"
    ]
   },
   {
@@ -215,8 +57,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:41.179936Z",
-     "start_time": "2019-09-30T20:32:41.167940Z"
+     "end_time": "2020-02-16T23:06:30.439251Z",
+     "start_time": "2020-02-16T23:06:30.293164Z"
     }
    },
    "outputs": [],
@@ -242,8 +84,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:41.366836Z",
-     "start_time": "2019-09-30T20:32:41.354840Z"
+     "end_time": "2020-02-16T23:06:30.580287Z",
+     "start_time": "2020-02-16T23:06:30.440284Z"
     }
    },
    "outputs": [
@@ -269,8 +111,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:41.624168Z",
-     "start_time": "2019-09-30T20:32:41.616168Z"
+     "end_time": "2020-02-16T23:06:30.721943Z",
+     "start_time": "2020-02-16T23:06:30.582311Z"
     }
    },
    "outputs": [],
@@ -287,8 +129,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:41.867317Z",
-     "start_time": "2019-09-30T20:32:41.851286Z"
+     "end_time": "2020-02-16T23:06:30.858538Z",
+     "start_time": "2020-02-16T23:06:30.731964Z"
     }
    },
    "outputs": [
@@ -313,8 +155,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:42.080383Z",
-     "start_time": "2019-09-30T20:32:42.068420Z"
+     "end_time": "2020-02-16T23:06:30.995044Z",
+     "start_time": "2020-02-16T23:06:30.861489Z"
     }
    },
    "outputs": [],
@@ -337,8 +179,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:42.316382Z",
-     "start_time": "2019-09-30T20:32:42.304428Z"
+     "end_time": "2020-02-16T23:06:31.162445Z",
+     "start_time": "2020-02-16T23:06:30.996140Z"
     }
    },
    "outputs": [
@@ -365,8 +207,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:42.492953Z",
-     "start_time": "2019-09-30T20:32:42.484957Z"
+     "end_time": "2020-02-16T23:06:31.315818Z",
+     "start_time": "2020-02-16T23:06:31.163407Z"
     }
    },
    "outputs": [],
@@ -391,8 +233,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:42.750631Z",
-     "start_time": "2019-09-30T20:32:42.742639Z"
+     "end_time": "2020-02-16T23:06:31.484233Z",
+     "start_time": "2020-02-16T23:06:31.321761Z"
     }
    },
    "outputs": [
@@ -416,8 +258,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:42.994632Z",
-     "start_time": "2019-09-30T20:32:42.986632Z"
+     "end_time": "2020-02-16T23:06:31.632980Z",
+     "start_time": "2020-02-16T23:06:31.490217Z"
     }
    },
    "outputs": [],
@@ -436,8 +278,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:43.249617Z",
-     "start_time": "2019-09-30T20:32:43.237619Z"
+     "end_time": "2020-02-16T23:06:31.768505Z",
+     "start_time": "2020-02-16T23:06:31.638927Z"
     }
    },
    "outputs": [
@@ -463,29 +305,13 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:43.493658Z",
-     "start_time": "2019-09-30T20:32:43.481655Z"
+     "end_time": "2020-02-16T23:06:32.449281Z",
+     "start_time": "2020-02-16T23:06:31.769490Z"
     }
    },
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    # prepare data\n",
-    "    split = 0.67\n",
-    "    trainingSet, testSet = handleDataset(dataset, 0.66)\n",
-    "    print('Train: ' + repr(len(trainingSet)))\n",
-    "    print('Test: ' + repr(len(testSet)))\n",
-    "    # generate predictions\n",
-    "    predictions = []\n",
-    "    k = 3\n",
-    "    for x in range(len(testSet)):\n",
-    "        neighbors = getKNeighbors(trainingSet, testSet[x], k)\n",
-    "        result = getResponse(neighbors)\n",
-    "        predictions.append(result)\n",
-    "        print(f'> predicted = {result}, actual = {testSet[x][-1]}')\n",
-    "                                            \n",
-    "    accuracy = getAccuracy(testSet, predictions)\n",
-    "    print(f'Accuracy: {round(accuracy,3)}%')"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -493,8 +319,38 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-30T20:32:44.530580Z",
-     "start_time": "2019-09-30T20:32:44.514586Z"
+     "end_time": "2020-02-16T23:06:32.465145Z",
+     "start_time": "2020-02-16T23:06:32.455179Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    # prepare data\n",
+    "    split = 0.8\n",
+    "    trainingSet, testSet = handleDataset(dataset, split)\n",
+    "    print('Train: ' + repr(len(trainingSet)))\n",
+    "    print('Test: ' + repr(len(testSet)))\n",
+    "    # generate predictions\n",
+    "    predictions = []\n",
+    "    k = 3\n",
+    "    for x in range(len(testSet)):\n",
+    "        neighbors = getKNeighbors(trainingSet, testSet[x], k)\n",
+    "        result = getResponse(neighbors)    \n",
+    "        predictions.append(result)\n",
+    "        print(f'> predicted = {result}, actual = {testSet[x][-1]}')\n",
+    "                                            \n",
+    "    accuracy = getAccuracy(testSet, predictions)\n",
+    "    print(f'k: {k}, Accuracy: {round(accuracy,3)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-16T23:06:32.623369Z",
+     "start_time": "2020-02-16T23:06:32.467140Z"
     }
    },
    "outputs": [
@@ -502,8 +358,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 101\n",
-      "Test: 49\n",
+      "Train: 121\n",
+      "Test: 29\n",
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
@@ -514,18 +370,6 @@
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
       "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-setosa, actual = Iris-setosa\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
       "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
       "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
       "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
@@ -536,10 +380,6 @@
       "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
       "> predicted = Iris-virginica, actual = Iris-versicolor\n",
       "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-versicolor, actual = Iris-versicolor\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
       "> predicted = Iris-versicolor, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
@@ -547,13 +387,9 @@
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-versicolor, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
       "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "> predicted = Iris-virginica, actual = Iris-virginica\n",
-      "Accuracy: 91.837%\n"
+      "k: 3, Accuracy: 89.655%\n"
      ]
     }
    ],
@@ -578,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
