Feature extraction for diabetes and iris dataset

--- a/Principal Component Analysis/dimensionality reduction.ipynb
+++ b/Principal Component Analysis/dimensionality reduction.ipynb
@@ -1,19 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Dimensionality-reduction-Using-PCA\" data-toc-modified-id=\"Dimensionality-reduction-Using-PCA-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Dimensionality reduction Using PCA</a></span></li><li><span><a href=\"#Feature-Extraction-on-Diabetes-dataset\" data-toc-modified-id=\"Feature-Extraction-on-Diabetes-dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Feature Extraction on Diabetes dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#ACcuracy-Before-applying-PCA\" data-toc-modified-id=\"ACcuracy-Before-applying-PCA-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>ACcuracy Before applying PCA</a></span></li></ul></li><li><span><a href=\"#On-Mnist-Dataset\" data-toc-modified-id=\"On-Mnist-Dataset-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>On Mnist Dataset</a></span></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.093331Z",
-     "start_time": "2020-04-12T00:32:21.171269Z"
+     "end_time": "2020-04-17T16:53:43.976333Z",
+     "start_time": "2020-04-17T16:53:40.941030Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import load_iris"
+    "from sklearn.datasets import load_iris\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -21,8 +35,30 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.126882Z",
-     "start_time": "2020-04-12T00:32:23.099022Z"
+     "end_time": "2020-04-17T16:53:43.992027Z",
+     "start_time": "2020-04-17T16:53:43.981690Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dimensionality reduction Using PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:44.209748Z",
+     "start_time": "2020-04-17T16:53:43.997649Z"
     }
    },
    "outputs": [],
@@ -79,12 +115,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Extraction on Diabetes dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.298270Z",
-     "start_time": "2020-04-12T00:32:23.131860Z"
+     "end_time": "2020-04-17T16:53:44.419215Z",
+     "start_time": "2020-04-17T16:53:44.218687Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "0            6      148             72             35        0  33.6   \n",
+       "1            1       85             66             29        0  26.6   \n",
+       "2            8      183             64              0        0  23.3   \n",
+       "3            1       89             66             23       94  28.1   \n",
+       "4            0      137             40             35      168  43.1   \n",
+       "\n",
+       "   DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                     0.627   50        1  \n",
+       "1                     0.351   31        0  \n",
+       "2                     0.672   32        1  \n",
+       "3                     0.167   21        0  \n",
+       "4                     2.288   33        1  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes_data = pd.read_csv(r'../datasets/diabetes_data.csv')\n",
+    "diabetes_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:44.499226Z",
+     "start_time": "2020-04-17T16:53:44.428118Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X = diabetes_data[diabetes_data.columns[:-1]].values\n",
+    "y = diabetes_data[diabetes_data.columns[-1]].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:43:53.350520Z",
+     "start_time": "2020-04-17T16:43:53.342122Z"
+    }
+   },
+   "source": [
+    "## ACcuracy Before applying PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:44.652486Z",
+     "start_time": "2020-04-17T16:53:44.507580Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:44.948070Z",
+     "start_time": "2020-04-17T16:53:44.666777Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before feature extraction\n",
+      "Number of features of X: 8\n",
+      "Accuracy: 0.7142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using Logistic Regression\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_pred = lr.predict(X_test)\n",
+    "print(\"Before feature extraction\")\n",
+    "print(f\"Number of features of X: {X_train.shape[1]}\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:45.049918Z",
+     "start_time": "2020-04-17T16:53:44.960489Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Transforming Dataset\n",
+    "\n",
+    "pca = PCA(n_component=6)\n",
+    "X_transformed = pca.fit_transform(X)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_transformed, y, test_size=0.2, stratify=y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:45.162775Z",
+     "start_time": "2020-04-17T16:53:45.049918Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After feature extraction\n",
+      "Number of features of X: 6\n",
+      "Accuracy: 0.7337662337662337\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_pred = lr.predict(X_test)\n",
+    "print(\"After feature extraction\")\n",
+    "print(f\"Number of features of X: {X_train.shape[1]}\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:17.733258Z",
+     "start_time": "2020-04-17T16:53:17.726273Z"
+    }
+   },
+   "source": [
+    "# On Mnist Dataset\n",
+    "\n",
+    "Reducing number of features for visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-17T16:53:45.271370Z",
+     "start_time": "2020-04-17T16:53:45.165615Z"
     }
    },
    "outputs": [],
@@ -96,11 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.450487Z",
-     "start_time": "2020-04-12T00:32:23.304120Z"
+     "end_time": "2020-04-17T16:53:45.397396Z",
+     "start_time": "2020-04-17T16:53:45.276300Z"
     }
    },
    "outputs": [],
@@ -111,11 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.597671Z",
-     "start_time": "2020-04-12T00:32:23.453551Z"
+     "end_time": "2020-04-17T16:53:45.527547Z",
+     "start_time": "2020-04-17T16:53:45.404998Z"
     }
    },
    "outputs": [
@@ -135,11 +444,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.720704Z",
-     "start_time": "2020-04-12T00:32:23.602888Z"
+     "end_time": "2020-04-17T16:53:45.655688Z",
+     "start_time": "2020-04-17T16:53:45.537553Z"
     }
    },
    "outputs": [],
@@ -150,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:23.901662Z",
-     "start_time": "2020-04-12T00:32:23.733667Z"
+     "end_time": "2020-04-17T16:53:46.104685Z",
+     "start_time": "2020-04-17T16:53:45.665223Z"
     }
    },
    "outputs": [
@@ -164,7 +473,7 @@
        "(150, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,11 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-12T00:32:24.673842Z",
-     "start_time": "2020-04-12T00:32:23.904655Z"
+     "end_time": "2020-04-17T16:53:47.087110Z",
+     "start_time": "2020-04-17T16:53:46.115345Z"
     }
    },
    "outputs": [
@@ -236,7 +545,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
