--- a/Random Forest/random_forest.ipynb
+++ b/Random Forest/random_forest.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Model-Definition\" data-toc-modified-id=\"Model-Definition-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Model Definition</a></span></li><li><span><a href=\"#Training-and-testing-on-Diabetes-Dataset\" data-toc-modified-id=\"Training-and-testing-on-Diabetes-Dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Training and testing on Diabetes Dataset</a></span></li><li><span><a href=\"#Metrics\" data-toc-modified-id=\"Metrics-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Metrics</a></span></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -21,6 +31,15 @@
     "\n",
     "from collections import Counter\n",
     "from decision_tree import DecisionTree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Definition\n",
+    "\n",
+    "Using previously written Decision tree"
    ]
   },
   {
@@ -103,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_____"
+    "# Training and testing on Diabetes Dataset"
    ]
   },
   {
@@ -194,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -268,7 +294,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
