--- a/Principal Component Analysis/dimensionality reduction.ipynb
+++ b/Principal Component Analysis/dimensionality reduction.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Dimensionality-reduction-Using-PCA\" data-toc-modified-id=\"Dimensionality-reduction-Using-PCA-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Dimensionality reduction Using PCA</a></span></li><li><span><a href=\"#Feature-Extraction-on-Diabetes-dataset\" data-toc-modified-id=\"Feature-Extraction-on-Diabetes-dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Feature Extraction on Diabetes dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#ACcuracy-Before-applying-PCA\" data-toc-modified-id=\"ACcuracy-Before-applying-PCA-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>ACcuracy Before applying PCA</a></span></li></ul></li><li><span><a href=\"#On-Mnist-Dataset\" data-toc-modified-id=\"On-Mnist-Dataset-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>On Mnist Dataset</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Dimensionality-reduction-Using-PCA\" data-toc-modified-id=\"Dimensionality-reduction-Using-PCA-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Dimensionality reduction Using PCA</a></span></li><li><span><a href=\"#Feature-Extraction-on-Diabetes-dataset\" data-toc-modified-id=\"Feature-Extraction-on-Diabetes-dataset-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Feature Extraction on Diabetes dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#Accuracy-Before-applying-PCA\" data-toc-modified-id=\"Accuracy-Before-applying-PCA-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Accuracy Before applying PCA</a></span></li><li><span><a href=\"#Accuracy-Before-applying-PCA\" data-toc-modified-id=\"Accuracy-Before-applying-PCA-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Accuracy Before applying PCA</a></span></li></ul></li><li><span><a href=\"#On-Mnist-Dataset\" data-toc-modified-id=\"On-Mnist-Dataset-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>On Mnist Dataset</a></span></li></ul></div>"
    ]
   },
   {
@@ -278,7 +278,7 @@
     }
    },
    "source": [
-    "## ACcuracy Before applying PCA"
+    "## Accuracy Before applying PCA"
    ]
   },
   {
@@ -324,6 +324,13 @@
     "print(\"Before feature extraction\")\n",
     "print(f\"Number of features of X: {X_train.shape[1]}\")\n",
     "print(f\"Accuracy: {accuracy_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy Before applying PCA"
    ]
   },
   {
