updated header in PCA

--- a/Principal Component Analysis/dimensionality reduction.ipynb
+++ b/Principal Component Analysis/dimensionality reduction.ipynb
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accuracy Before applying PCA"
+    "## Accuracy After applying PCA"
    ]
   },
   {
